--- a/public/assets/css/tailwind.css
+++ b/public/assets/css/tailwind.css
@@ -662,6 +662,10 @@ video {
   margin-left: 1rem;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
 .mt-16 {
   margin-top: 4rem;
 }
@@ -1230,6 +1234,10 @@ video {
 
 .pl-9 {
   padding-left: 2.25rem;
+}
+
+.pr-12 {
+  padding-right: 3rem;
 }
 
 .pr-4 {
