--- a/src/views/admin/barang/index.ejs
+++ b/src/views/admin/barang/index.ejs
@@ -1,73 +1,137 @@
 <div class="p-6">
-
-     <div class="sm:flex sm:justify-between sm:items-center">
-                <!-- Left: Title -->
-                <div class="mb-4 sm:mb-0 py-5">
-                    <h1 class="text-xl md:text-3xl text-slate-800 text-white font-bold">Data Barang</h1>
-                </div>
-            </div>
+  <div class="sm:flex sm:justify-between sm:items-center">
+    <!-- Left: Title -->
+    <div class="mb-4 sm:mb-0 py-5">
+      <h1 class="text-xl md:text-3xl text-slate-800 text-white font-bold">
+        Data Barang
+      </h1>
+    </div>
+  </div>
   <!-- Tombol Aksi -->
   <div class="flex justify-between items-center mb-4 rounded-full">
-    <a href="/barang/add" class="bg-white text-black px-4 py-2 rounded-full flex items-center">
+    <a
+      href="/barang/add"
+      class="bg-white text-black px-4 py-2 rounded-full flex items-center"
+    >
       <span>Tambah Data</span>
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-2" viewBox="0 0 20 20" fill="currentColor">
-        <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" />
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="h-5 w-5 ml-2"
+        viewBox="0 0 20 20"
+        fill="currentColor"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
+          clip-rule="evenodd"
+        />
       </svg>
     </a>
-
-    <div class="flex items-center space-x-2">
-      <!-- Search bar -->
-      <div class="relative">
-        <input type="text" placeholder="Search..." class="bg-white px-4 py-2 rounded-full text-black focus:outline-none"/>
-        <svg xmlns="http://www.w3.org/2000/svg" class="absolute right-3 top-1/2 transform -translate-y-1/2 h-5 w-5 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35M4.75 11a7 7 0 1114 0 7 7 0 01-14 0z" />
-        </svg>
-      </div>
+  <!-- Download Button -->
+    <div class="relative">
+      <button
+        class="bg-white px-6 py-2 pl-8 pr-12 rounded-full text-black focus:outline-none font-semibold text-right"
+      >
+        Unduh Data Ke Excel
+      </button>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="16"
+        height="16"
+        fill="currentColor"
+        class="absolute right-4 top-1/2 transform -translate-y-1/2 h-5 w-5 text-gray-400"
+        viewBox="0 0 16 16"
+        style="margin-left: 8px;"
+      >
+        <path
+          d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"
+        />
+        <path
+          d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"
+        />
+      </svg>
     </div>
   </div>
 
   <!-- Tabel -->
- <div class="overflow-x-auto">
-  <table class="min-w-full bg-white rounded-md w-full shadow-lg">
-    <thead>
-      <tr>
-        <th class="py-3 px-6 bg-gray-100 text-left font-semibold text-sm text-gray-600">Id Brng</th>
-        <th class="py-3 px-6 bg-gray-100 text-left font-semibold text-sm text-gray-600">Nama Barang</th>
-        <th class="py-3 px-6 bg-gray-100 text-left font-semibold text-sm text-gray-600">Stok</th>
-        <th class="py-3 px-6 bg-gray-100 text-left font-semibold text-sm text-gray-600">Harga Beli</th>
-        <th class="py-3 px-6 bg-gray-100 text-left font-semibold text-sm text-gray-600">Harga Jual</th>
-        <th class="py-3 px-6 bg-gray-100 text-left font-semibold text-sm text-gray-600">Keterangan</th>
-        <th class="py-3 px-6 bg-gray-100 text-left font-semibold text-sm text-gray-600">Aksi</th>
-      </tr>
-    </thead>
-    <tbody>
+  <div class="overflow-x-auto">
+    <table class="min-w-full bg-white rounded-md w-full shadow-lg">
+      <thead>
+        <tr>
+          <th
+            class="py-3 px-6 bg-gray-100 text-left font-semibold text-sm text-gray-600"
+          >
+            Id Brng
+          </th>
+          <th
+            class="py-3 px-6 bg-gray-100 text-left font-semibold text-sm text-gray-600"
+          >
+            Nama Barang
+          </th>
+          <th
+            class="py-3 px-6 bg-gray-100 text-left font-semibold text-sm text-gray-600"
+          >
+            Stok
+          </th>
+          <th
+            class="py-3 px-6 bg-gray-100 text-left font-semibold text-sm text-gray-600"
+          >
+            Harga Beli
+          </th>
+          <th
+            class="py-3 px-6 bg-gray-100 text-left font-semibold text-sm text-gray-600"
+          >
+            Harga Jual
+          </th>
+          <th
+            class="py-3 px-6 bg-gray-100 text-left font-semibold text-sm text-gray-600"
+          >
+            Keterangan
+          </th>
+          <th
+            class="py-3 px-6 bg-gray-100 text-left font-semibold text-sm text-gray-600"
+          >
+            Aksi
+          </th>
+        </tr>
+      </thead>
+      <tbody>
         <% if(allBarang.length > 0) { %> <% allBarang.forEach((b, index) => { %>
-      <tr class="hover:bg-gray-50">
-        <td class="py-4 px-6 text-sm text-gray-700"><%= b.kode %></td>
-        <td class="py-4 px-6 text-sm text-gray-700"><%= b.nama_barang %></td>
-        <td class="py-4 px-6 text-sm text-gray-700"><%= b.stok %></td>
-        <td class="py-4 px-6 text-sm text-gray-700"><%= b.harga_beli %></td>
-        <td class="py-4 px-6 text-sm text-gray-700"><%= b.harga_jual %></td>
-        <td class="py-4 px-6 text-sm text-gray-700"><%= b.keterangan %></td>
-        <td class="py-4 px-6 flex space-x-2">
-        <a href="/barang/edit/<%= b.barang_id %>" class="bg-yellow-500 hover:bg-yellow-600 text-white font-semibold rounded-md px-4 py-2 text-xs">Ubah Data</a>
-        <button type="button" 
-        class="bg-red-500 hover:bg-red-600 text-white font-semibold rounded-md px-4 py-2 text-xs" 
-        onclick="confirmDelete('<%= b.barang_id %>')">
-        Hapus
-        </button>
-
-        </td>
-      </tr>
-      <% }) %>
-      <% } else { %>
-        <td class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap justify-center" colspan="7">
-            <div class="text-center font-medium justify-center">Data tidak ada!</div>
+        <tr class="hover:bg-gray-50">
+          <td class="py-4 px-6 text-sm text-gray-700"><%= b.kode %></td>
+          <td class="py-4 px-6 text-sm text-gray-700"><%= b.nama_barang %></td>
+          <td class="py-4 px-6 text-sm text-gray-700"><%= b.stok %></td>
+          <td class="py-4 px-6 text-sm text-gray-700"><%= b.harga_beli %></td>
+          <td class="py-4 px-6 text-sm text-gray-700"><%= b.harga_jual %></td>
+          <td class="py-4 px-6 text-sm text-gray-700"><%= b.keterangan %></td>
+          <td class="py-4 px-6 flex space-x-2">
+            <a
+              href="/barang/edit/<%= b.barang_id %>"
+              class="bg-yellow-500 hover:bg-yellow-600 text-white font-semibold rounded-md px-4 py-2 text-xs"
+              >Ubah Data</a
+            >
+            <button
+              type="button"
+              class="bg-red-500 hover:bg-red-600 text-white font-semibold rounded-md px-4 py-2 text-xs"
+              onclick="confirmDelete('<%= b.barang_id %>')"
+            >
+              Hapus
+            </button>
+          </td>
+        </tr>
+        <% }) %> <% } else { %>
+        <td
+          class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap justify-center"
+          colspan="7"
+        >
+          <div class="text-center font-medium justify-center">
+            Data tidak ada!
+          </div>
         </td>
         <% } %>
-    </tbody>
-  </table>
-</div>
+      </tbody>
+    </table>
+  </div>
 </div>
 
 <script>
@@ -80,14 +144,14 @@
       confirmButtonColor: "#3085d6",
       cancelButtonColor: "#d33",
       confirmButtonText: "Ya, hapus!",
-      cancelButtonText: "Batal"
+      cancelButtonText: "Batal",
     });
 
     if (result.isConfirmed) {
       // Panggil route delete menggunakan fetch API
       try {
         const response = await fetch(`/barang/${barangId}`, {
-          method: 'DELETE'
+          method: "DELETE",
         });
 
         if (response.ok) {
@@ -97,10 +161,18 @@
             window.location.reload();
           }, 1500);
         } else {
-          Swal.fire("Gagal!", "Terjadi kesalahan saat menghapus barang.", "error");
+          Swal.fire(
+            "Gagal!",
+            "Terjadi kesalahan saat menghapus barang.",
+            "error"
+          );
         }
       } catch (error) {
-        Swal.fire("Gagal!", "Terjadi kesalahan saat menghapus barang.", "error");
+        Swal.fire(
+          "Gagal!",
+          "Terjadi kesalahan saat menghapus barang.",
+          "error"
+        );
       }
     }
   }
