--- a/src/views/admin/barang/add.ejs
+++ b/src/views/admin/barang/add.ejs
@@ -47,6 +47,16 @@
       </div>
 
       <div class="grid grid-cols-3 gap-4 mb-4">
+        <label for="harga_beli" class="col-span-1">Harga Jual :</label>
+        <input
+          type="text"
+          id="harga_jual"
+          name="harga_jual"
+          class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
+        />
+      </div>
+
+      <div class="grid grid-cols-3 gap-4 mb-4">
         <label for="keterangan" class="col-span-1">Keterangan :</label>
         <input
           type="text"
