--- a/src/views/admin/auth/login.ejs
+++ b/src/views/admin/auth/login.ejs
@@ -1,7 +1,7 @@
 <div class="bg-teal-800 p-8 rounded-lg shadow-lg w-full max-w-md">
     <!-- Logo -->
     <div class="flex justify-center mb-6">
-        <img src="/path/to/logo.png" alt="Logo" class="w-40 h-auto">
+        <img src="/assets/images/logo/LOGODUTA.png" alt="Logo" class="w-40 h-auto">
     </div>
     <!-- Title -->
     <h1 class="text-center text-2xl font-bold text-white mb-8 leading-relaxed">
