--- a/src/views/admin/customer/index.ejs
+++ b/src/views/admin/customer/index.ejs
@@ -29,12 +29,12 @@
   </a>
     </button>
 
-    <div class="flex items-center space-x-2">
-      <!-- Download Button -->
-    <div class="relative">
-      <button
-        class="bg-white px-6 py-2 pl-8 pr-12 rounded-full text-black focus:outline-none font-semibold text-right"
-      >
+    <!-- dwonload -->
+     <form id="customerReport" method="POST" action="/report-customer">
+     <div class="relative">
+       <button type="button" onclick="exportReport()"
+       class="bg-white px-6 py-2 pl-8 pr-12 rounded-full text-black focus:outline-none font-semibold text-right"
+       >
         Unduh Data Ke Excel
       </button>
       <svg
@@ -48,14 +48,14 @@
       >
         <path
           d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"
-        />
+          />
         <path
           d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"
-        />
-      </svg>
+          />
+        </svg>
+      </div>
     </div>
-    </div>
-  </div>
+  </form>
 
   <!-- Tabel -->
   <div class="overflow-x-auto">
@@ -142,4 +142,9 @@
       }
     }
   }
+
+   function exportReport() { 
+  const formReport = document.getElementById("customerReport");
+  formReport.submit(); // Form akan dikirim ke "/barang" sesuai dengan method POST
+}
 </script>
