--- a/src/views/admin/pegawai/index.ejs
+++ b/src/views/admin/pegawai/index.ejs
@@ -28,33 +28,33 @@
       </svg>
     </a>
 
-    <div class="flex items-center space-x-2">
-      <!-- Download Button -->
-      <div class="relative">
-        <button
-          class="bg-white px-6 py-2 pl-8 pr-12 rounded-full text-black focus:outline-none font-semibold text-right"
-        >
-          Unduh Data Ke Excel
-        </button>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="16"
-          height="16"
-          fill="currentColor"
-          class="absolute right-4 top-1/2 transform -translate-y-1/2 h-5 w-5 text-gray-400"
-          viewBox="0 0 16 16"
-          style="margin-left: 8px"
-        >
-          <path
-            d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"
+     <!-- dwonload -->
+     <form id="pegawaiReport" method="POST" action="/report-pegawai">
+     <div class="relative">
+       <button type="button" onclick="exportReport()"
+       class="bg-white px-6 py-2 pl-8 pr-12 rounded-full text-black focus:outline-none font-semibold text-right"
+       >
+        Unduh Data Ke Excel
+      </button>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="16"
+        height="16"
+        fill="currentColor"
+        class="absolute right-4 top-1/2 transform -translate-y-1/2 h-5 w-5 text-gray-400"
+        viewBox="0 0 16 16"
+        style="margin-left: 8px;"
+      >
+        <path
+          d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"
           />
-          <path
-            d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"
+        <path
+          d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"
           />
         </svg>
       </div>
     </div>
-  </div>
+  </form>
 
   <!-- Tabel -->
   <div class="overflow-x-auto">
@@ -188,4 +188,9 @@
       }
     }
   }
+
+  function exportReport() { 
+  const formReport = document.getElementById("pegawaiReport");
+  formReport.submit();
+}
 </script>
