--- a/src/views/admin/operasional/edit.ejs
+++ b/src/views/admin/operasional/edit.ejs
@@ -40,7 +40,7 @@
       </div>
 
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="debet" class="col-span-1">Jummlah Debet :</label>
+        <label for="debet" class="col-span-1">Jumlah Debet :</label>
         <input
           type="text"
           id="debet"
