--- a/public/assets/css/satoshi.css
+++ b/public/assets/css/satoshi.css
@@ -624,6 +624,14 @@ video {
   grid-column: span 2 / span 2;
 }
 
+.m-1 {
+  margin: 0.25rem;
+}
+
+.m-1\.5 {
+  margin: 0.375rem;
+}
+
 .m-auto {
   margin: auto;
 }
