--- a/src/views/admin/laporan_jurnal/add.ejs
+++ b/src/views/admin/laporan_jurnal/add.ejs
@@ -19,6 +19,16 @@
       </div>
 
       <div class="grid grid-cols-3 gap-4 mb-4">
+        <label for="data_akun" class="col-span-1">Data Akun :</label>
+        <input
+          type="text"
+          id="data_akun"
+          name="data_akun"
+          class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
+        />
+      </div>
+
+      <div class="grid grid-cols-3 gap-4 mb-4">
         <label for="nama_barang" class="col-span-1">Nama Barang :</label>
         <input
           type="text"
