--- a/src/views/layouts/admin/admin_Sidebar.ejs
+++ b/src/views/layouts/admin/admin_Sidebar.ejs
@@ -182,6 +182,14 @@
                   Data Order
                 </a>
               </li>
+              <li>
+                <a
+                  href="/data_akun"
+                  class="block py-2 px-4 rounded-sm text-bodydark1 hover:bg-graydark dark:hover:bg-meta-4"
+                >
+                  Data Akun
+                </a>
+              </li>
             </ul>
           </li>
 
